[package]
name = "splotch"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Plot data to HTML"
keywords = ["chart", "graph", "plot", "visualization"]
categories = ["science", "visualization"]
repository = "https://github.com/AldaronLau/splotch"
readme = "README.md"

[dependencies]
footile = "0.7"
pointy = "0.3"
